[metadata]
name = fhir-scraper
version = 1.0.0
author = Guillaume Rongier
author_email = guillaume.rongier@intersystems.com
description = A simple python script to copy/scrap/crawl a FHIR repository to another one.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/grongierisc/fhir-scraper
project_urls =
    Bug Tracker = https://github.com/grongierisc/fhir-scraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Healthcare Industry
    Topic :: Utilities

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    aiohttp
    async-timeout
    attrs
    certifi
    chardet
    charset-normalizer
    fhirpy
    idna
    idna-ssl
    multidict
    pytz
    requests
    typing-extensions
    urllib3
    yarl

[options.packages.find]
where = src